<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <artifactId>company-accounts.api.ch.gov.uk</artifactId>
  <version>unversioned</version>
  <packaging>jar</packaging>
  <name>company-accounts-api</name>
  <description>Company accounts API to handle company accounts data</description>

  <parent>
    <groupId>uk.gov.companieshouse</groupId>
    <artifactId>companies-house-parent</artifactId>
    <version>2.1.5</version>
  </parent>

  <properties>
    <!-- JDK Version -->
    <jdk.version>21</jdk.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>21</java.version>
    <skip.unit.tests>false</skip.unit.tests>

    <!-- Internal Dependency Versions -->
    <api-helper-java.version>3.0.1</api-helper-java.version>
    <structured-logging.version>3.0.3</structured-logging.version>
    <company-accounts-library.version>3.0.1</company-accounts-library.version>
    <private-api-sdk-java.version>4.0.76</private-api-sdk-java.version>
    <api-sdk-java.version>6.0.0</api-sdk-java.version>
    <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>

    <log4j2.version>2.23.1</log4j2.version>
    <aws-java-sdk.version>1.12.683</aws-java-sdk.version>
    <commons-io.version>2.15.1</commons-io.version>
    <json.version>20240303</json.version>

    <spring-boot-dependencies.version>3.2.4</spring-boot-dependencies.version>
    <spring-boot-maven-plugin.version>3.2.4</spring-boot-maven-plugin.version>
    <spring-core.version>6.1.5</spring-core.version>

    <!-- Maven and Surefire plugins -->
    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>

  </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j2.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

  <dependencies>
    <!-- Compile -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${json.version}</version>
    </dependency>
      <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>${spring-core.version}</version>
    </dependency>
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>api-helper-java</artifactId>
        <version>${api-helper-java.version}</version>
    </dependency>
    <dependency>
        <groupId>com.amazonaws</groupId>
        <artifactId>aws-java-sdk-s3</artifactId>
        <version>${aws-java-sdk.version}</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>private-api-sdk-java</artifactId>
        <version>${private-api-sdk-java.version}</version>
    </dependency>
    <dependency>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>api-sdk-java</artifactId>
        <version>${api-sdk-java.version}</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>api-sdk-manager-java-library</artifactId>
        <version>${api-sdk-manager-java-library.version}</version>
        <exclusions>
            <exclusion>
                <groupId>jakarta.servlet</groupId>
                <artifactId>servlet-api</artifactId>
            </exclusion>
        </exclusions>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.scanner.maven</groupId>
      <artifactId>sonar-maven-plugin</artifactId>
      <version>${sonar-maven-plugin.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-mongodb</artifactId>
    </dependency>
    <dependency>
      <groupId>uk.gov.companieshouse</groupId>
      <artifactId>structured-logging</artifactId>
      <version>${structured-logging.version}</version>
    </dependency>
    <dependency>
      <groupId>uk.gov.companieshouse</groupId>
      <artifactId>company-accounts-library</artifactId>
      <version>${company-accounts-library.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
        <exclusions>
            <exclusion>
                <artifactId>snakeyaml</artifactId>
                <groupId>org.yaml</groupId>
            </exclusion>
        </exclusions>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>jakarta.xml.bind</groupId>
          <artifactId>jakarta.xml.bind-api</artifactId>
      </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot-maven-plugin.version}</version>
        <configuration>
          <mainClass>uk.gov.companieshouse.api.accounts.CompanyAccountsApplication
          </mainClass>
          <layout>ZIP</layout>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
              <source>${java.version}</source>
              <target>${java.version}</target>
              <fork>true</fork>
              <meminitial>128m</meminitial>
              <encoding>${project.build.sourceEncoding}</encoding>
              <maxmem>512m</maxmem>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
          <configuration>
              <archive>
                  <manifest>
                      <addClasspath>true</addClasspath>
                  </manifest>
              </archive>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
              <skipTests>${skip.unit.tests}</skipTests>
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
      <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <version>${jib-maven-plugin.version}</version>
            <configuration>
                <container>
                    <expandClasspathDependencies>true</expandClasspathDependencies>
                </container>
                <from>
                    <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
                </from>
                <to>
                    //Once the pipeline is moved to shared services need to update this to image reference from shared services
                    <image>169942020521.dkr.ecr.eu-west-1.amazonaws.com/local/company-accounts.api.ch.gov.uk:latest</image>
                </to>
            </configuration>
      </plugin>
    </plugins>
  </build>

</project>
